--- a/stories/index.html
+++ b/stories/index.html
@@ -3270,9 +3270,45 @@
   <tbody>
     <tr>
       <td>0001</td>
-      <td><a href="/stories/pl/0001_bardzo-wysoki-człowiek_slides.html" target="_blank">Bardzo Wysoki Człowiek</a></td>
+      <td><a href="/stories/pl/0001_bardzo-wysoki-człowiek_slides.html" target="_blank">Bardzo wysoki człowiek</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="pl0001"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0003</td>
+      <td><a href="/stories/pl/0003_mundurki-szkolne_slides.html" target="_blank">Mundurki szkolne</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pl0003"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0008</td>
+      <td><a href="/stories/pl/0008_co-robisz_slides.html" target="_blank">Co robisz?</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pl0008"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0009</td>
+      <td><a href="/stories/pl/0009_gdzie-jest-mój-kot_slides.html" target="_blank">Gdzie jest mój kot?</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pl0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0030</td>
+      <td><a href="/stories/pl/0030_uczucia_slides.html" target="_blank">Uczucia</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pl0030"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0253</td>
+      <td><a href="/stories/pl/0253_moja-książka-z-obrazkami_slides.html" target="_blank">Moja książka z obrazkami</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pl0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0327</td>
+      <td><a href="/stories/pl/0327_liczymy-zwierzęta_slides.html" target="_blank">Liczymy zwierzęta</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pl0327"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
@@ -4695,7 +4731,7 @@
       <td>0003</td>
       <td><a href="http://africanstorybook.org/stories/school-clothes">School clothes</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0003">ar</a>, <a href="#da0003">da</a>, <a href="#eo0003">eo</a>, <a href="#es0003">es</a>, <a href="#fa0003">fa</a>, <a href="#gu0003">gu</a>, <a href="#it0003">it</a>, <a href="#ko0003">ko</a>, <a href="#nn0003">nn</a>, <a href="#no0003">no</a>, <a href="#pa0003">pa</a>, <a href="#ru0003">ru</a>, <a href="#tl0003">tl</a>, <a href="#tr0003">tr</a>, <a href="#vi0003">vi</a>, <a href="#yue0003">yue</a>, <a href="#zh0003">zh</a></td>
+      <td><a href="#ar0003">ar</a>, <a href="#da0003">da</a>, <a href="#eo0003">eo</a>, <a href="#es0003">es</a>, <a href="#fa0003">fa</a>, <a href="#gu0003">gu</a>, <a href="#it0003">it</a>, <a href="#ko0003">ko</a>, <a href="#nn0003">nn</a>, <a href="#no0003">no</a>, <a href="#pa0003">pa</a>, <a href="#pl0003">pl</a>, <a href="#ru0003">ru</a>, <a href="#tl0003">tl</a>, <a href="#tr0003">tr</a>, <a href="#vi0003">vi</a>, <a href="#yue0003">yue</a>, <a href="#zh0003">zh</a></td>
     </tr>
     <tr>
       <td>0004</td>
@@ -4719,13 +4755,13 @@
       <td>0008</td>
       <td><a href="http://africanstorybook.org/stories/what-are-you-doing">What are you doing?</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#aeb0008">aeb</a>, <a href="#ar0008">ar</a>, <a href="#da0008">da</a>, <a href="#de0008">de</a>, <a href="#eo0008">eo</a>, <a href="#es0008">es</a>, <a href="#fa0008">fa</a>, <a href="#gu0008">gu</a>, <a href="#it0008">it</a>, <a href="#ja0008">ja</a>, <a href="#jam0008">jam</a>, <a href="#ko0008">ko</a>, <a href="#nn0008">nn</a>, <a href="#no0008">no</a>, <a href="#pa0008">pa</a>, <a href="#ru0008">ru</a>, <a href="#tl0008">tl</a>, <a href="#tr0008">tr</a>, <a href="#uk0008">uk</a>, <a href="#vi0008">vi</a>, <a href="#yue0008">yue</a>, <a href="#zh0008">zh</a></td>
+      <td><a href="#aeb0008">aeb</a>, <a href="#ar0008">ar</a>, <a href="#da0008">da</a>, <a href="#de0008">de</a>, <a href="#eo0008">eo</a>, <a href="#es0008">es</a>, <a href="#fa0008">fa</a>, <a href="#gu0008">gu</a>, <a href="#it0008">it</a>, <a href="#ja0008">ja</a>, <a href="#jam0008">jam</a>, <a href="#ko0008">ko</a>, <a href="#nn0008">nn</a>, <a href="#no0008">no</a>, <a href="#pa0008">pa</a>, <a href="#pl0008">pl</a>, <a href="#ru0008">ru</a>, <a href="#tl0008">tl</a>, <a href="#tr0008">tr</a>, <a href="#uk0008">uk</a>, <a href="#vi0008">vi</a>, <a href="#yue0008">yue</a>, <a href="#zh0008">zh</a></td>
     </tr>
     <tr>
       <td>0009</td>
       <td><a href="http://africanstorybook.org/stories/where-my-cat">Where is my cat?</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#aeb0009">aeb</a>, <a href="#ar0009">ar</a>, <a href="#da0009">da</a>, <a href="#de0009">de</a>, <a href="#eo0009">eo</a>, <a href="#es0009">es</a>, <a href="#fa0009">fa</a>, <a href="#gu0009">gu</a>, <a href="#it0009">it</a>, <a href="#ja0009">ja</a>, <a href="#jam0009">jam</a>, <a href="#ko0009">ko</a>, <a href="#nn0009">nn</a>, <a href="#no0009">no</a>, <a href="#pa0009">pa</a>, <a href="#ru0009">ru</a>, <a href="#sv0009">sv</a>, <a href="#tl0009">tl</a>, <a href="#tr0009">tr</a>, <a href="#vi0009">vi</a>, <a href="#yue0009">yue</a>, <a href="#zh0009">zh</a></td>
+      <td><a href="#aeb0009">aeb</a>, <a href="#ar0009">ar</a>, <a href="#da0009">da</a>, <a href="#de0009">de</a>, <a href="#eo0009">eo</a>, <a href="#es0009">es</a>, <a href="#fa0009">fa</a>, <a href="#gu0009">gu</a>, <a href="#it0009">it</a>, <a href="#ja0009">ja</a>, <a href="#jam0009">jam</a>, <a href="#ko0009">ko</a>, <a href="#nn0009">nn</a>, <a href="#no0009">no</a>, <a href="#pa0009">pa</a>, <a href="#pl0009">pl</a>, <a href="#ru0009">ru</a>, <a href="#sv0009">sv</a>, <a href="#tl0009">tl</a>, <a href="#tr0009">tr</a>, <a href="#vi0009">vi</a>, <a href="#yue0009">yue</a>, <a href="#zh0009">zh</a></td>
     </tr>
     <tr>
       <td>0010</td>
@@ -4755,7 +4791,7 @@
       <td>0030</td>
       <td><a href="http://africanstorybook.org/stories/feelings">Feelings</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#aeb0030">aeb</a>, <a href="#ar0030">ar</a>, <a href="#es0030">es</a>, <a href="#fa0030">fa</a>, <a href="#it0030">it</a>, <a href="#ko0030">ko</a>, <a href="#pa0030">pa</a>, <a href="#ru0030">ru</a>, <a href="#tl0030">tl</a>, <a href="#tr0030">tr</a>, <a href="#vi0030">vi</a>, <a href="#yue0030">yue</a>, <a href="#zh0030">zh</a></td>
+      <td><a href="#aeb0030">aeb</a>, <a href="#ar0030">ar</a>, <a href="#es0030">es</a>, <a href="#fa0030">fa</a>, <a href="#it0030">it</a>, <a href="#ko0030">ko</a>, <a href="#pa0030">pa</a>, <a href="#pl0030">pl</a>, <a href="#ru0030">ru</a>, <a href="#tl0030">tl</a>, <a href="#tr0030">tr</a>, <a href="#vi0030">vi</a>, <a href="#yue0030">yue</a>, <a href="#zh0030">zh</a></td>
     </tr>
     <tr>
       <td>0049</td>
@@ -5103,7 +5139,7 @@
       <td>0253</td>
       <td><a href="http://africanstorybook.org/stories/my-picture-book-0">My Picture Book</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#aeb0253">aeb</a>, <a href="#ar0253">ar</a>, <a href="#bn0253">bn</a>, <a href="#de0253">de</a>, <a href="#eo0253">eo</a>, <a href="#es0253">es</a>, <a href="#fa0253">fa</a>, <a href="#gu0253">gu</a>, <a href="#hi0253">hi</a>, <a href="#it0253">it</a>, <a href="#ja0253">ja</a>, <a href="#jam0253">jam</a>, <a href="#ko0253">ko</a>, <a href="#ms0253">ms</a>, <a href="#ne0253">ne</a>, <a href="#nl0253">nl</a>, <a href="#nn0253">nn</a>, <a href="#no0253">no</a>, <a href="#ru0253">ru</a>, <a href="#tl0253">tl</a>, <a href="#uk0253">uk</a>, <a href="#vi0253">vi</a>, <a href="#yue0253">yue</a>, <a href="#zh0253">zh</a></td>
+      <td><a href="#aeb0253">aeb</a>, <a href="#ar0253">ar</a>, <a href="#bn0253">bn</a>, <a href="#de0253">de</a>, <a href="#eo0253">eo</a>, <a href="#es0253">es</a>, <a href="#fa0253">fa</a>, <a href="#gu0253">gu</a>, <a href="#hi0253">hi</a>, <a href="#it0253">it</a>, <a href="#ja0253">ja</a>, <a href="#jam0253">jam</a>, <a href="#ko0253">ko</a>, <a href="#ms0253">ms</a>, <a href="#ne0253">ne</a>, <a href="#nl0253">nl</a>, <a href="#nn0253">nn</a>, <a href="#no0253">no</a>, <a href="#pl0253">pl</a>, <a href="#ru0253">ru</a>, <a href="#tl0253">tl</a>, <a href="#uk0253">uk</a>, <a href="#vi0253">vi</a>, <a href="#yue0253">yue</a>, <a href="#zh0253">zh</a></td>
     </tr>
     <tr>
       <td>0262</td>
@@ -5223,7 +5259,7 @@
       <td>0327</td>
       <td><a href="http://africanstorybook.org/stories/counting-animals">Counting animals</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#aeb0327">aeb</a>, <a href="#ar0327">ar</a>, <a href="#es0327">es</a>, <a href="#fa0327">fa</a>, <a href="#it0327">it</a>, <a href="#ko0327">ko</a>, <a href="#no0327">no</a>, <a href="#pa0327">pa</a>, <a href="#tl0327">tl</a>, <a href="#vi0327">vi</a>, <a href="#yue0327">yue</a>, <a href="#zh0327">zh</a></td>
+      <td><a href="#aeb0327">aeb</a>, <a href="#ar0327">ar</a>, <a href="#es0327">es</a>, <a href="#fa0327">fa</a>, <a href="#it0327">it</a>, <a href="#ko0327">ko</a>, <a href="#no0327">no</a>, <a href="#pa0327">pa</a>, <a href="#pl0327">pl</a>, <a href="#tl0327">tl</a>, <a href="#vi0327">vi</a>, <a href="#yue0327">yue</a>, <a href="#zh0327">zh</a></td>
     </tr>
     <tr>
       <td>0331</td>
