--- a/stories/pl/0001_bardzo-wysoki-człowiek.html
+++ b/stories/pl/0001_bardzo-wysoki-człowiek.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bardzo Wysoki Człowiek</title>
+    <title>Bardzo wysoki człowiek</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,7 +43,7 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/01.jpg" />
 
-<h1 id="bardzo-wysoki-czowiek">Bardzo Wysoki Człowiek</h1>
+<h1 id="bardzo-wysoki-czowiek">Bardzo wysoki człowiek</h1>
 
 Cornelius Gulere<br>Polski</div><div class="pagebreak">
 
@@ -63,7 +63,7 @@ Cornelius Gulere<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/04.jpg" /></p>
 
-<p>Jego lóżko było za krótkie.</p>
+<p>Jego łóżko było za krótkie.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -84,7 +84,7 @@ Cornelius Gulere<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/07.jpg" /></p>
 
-<p>Zrobił bardzo długą motykę.</p>
+<p>Zrobił więc bardzo długą motykę.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
@@ -124,7 +124,7 @@ Cornelius Gulere<br>Polski</div><div class="pagebreak">
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Cornelius Gulere<br /><strong>Illustrations:</strong> Catherine Groenewald<br /><strong>Translation:</strong> Aleksandra Migorska<br /><strong>Language:</strong> Polish</p>
+<p><strong>Text:</strong> Cornelius Gulere<br /><strong>Illustrations:</strong> Catherine Groenewald<br /><strong>Translation:</strong> Aleks M.<br /><strong>Language:</strong> Polish</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/very-tall-man">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
