--- a/stories/pl/0253_moja-książka-z-obrazkami_slides.html
+++ b/stories/pl/0253_moja-książka-z-obrazkami_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Bardzo wysoki człowiek - Global African Storybook</title>
+  <title>Moja książka z obrazkami - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="bardzo-wysoki-człowiek" class="slide level1">
-<h1>Bardzo wysoki człowiek</h1>
+<section id="moja-książka-z-obrazkami" class="slide level1">
+<h1>Moja książka z obrazkami</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/02.jpg" /></p>
-<p>Jego motyka była za krótka.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/02.jpg" /></p>
+<p>Dziewczynka</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/03.jpg" /></p>
-<p>Jego wejście do domu było za niskie.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/03.jpg" /></p>
+<p>Ptak</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/04.jpg" /></p>
-<p>Jego łóżko było za krótkie.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/04.jpg" /></p>
+<p>Lew</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/05.jpg" /></p>
-<p>Jego rower był za niski.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/05.jpg" /></p>
+<p>Kot</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,75 +132,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/06.jpg" /></p>
-<p>Ten człowiek był po prostu za wysoki!</p>
-<center>
-<strong>5</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/07.jpg" /></p>
-<p>Zrobił więc bardzo długą motykę.</p>
-<center>
-<strong>6</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/08.jpg" /></p>
-<p>Zbudował bardzo wysokie wejście do domu.</p>
-<center>
-<strong>7</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/09.jpg" /></p>
-<p>Zbudował bardzo długie łóżko.</p>
-<center>
-<strong>8</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/10.jpg" /></p>
-<p>Kupił bardzo wysoki rower.</p>
-<center>
-<strong>9</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/11.jpg" /></p>
-<p>Siedział na bardzo wysokim krześle. I jadł bardzo długim widelcem.</p>
-<center>
-<strong>10</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/12.jpg" /></p>
-<p>Pewnego dnia opuścił swój dom i zamieszkał w obszernym lesie. Żył bardzo długo.</p>
-<center>
-<strong>11</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="bardzo-wysoki-człowiek-1">Bardzo wysoki człowiek</h2>
-<strong>Text:</strong> Cornelius Gulere<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> Aleks M.<br> <strong>Language:</strong> Polish<br>
+<h2 id="moja-książka-z-obrazkami-1">Moja książka z obrazkami</h2>
+<strong>Text:</strong> Oku Modesto<br> <strong>Illustrations:</strong> Rob Owen, Marleen Visser, Katrien Coetzer, Wiehan de Jager, Karen Lilje, Catherine Groenewald, Alice Toich<br> <strong>Translation:</strong> Aleks M.<br> <strong>Language:</strong> Polish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/very-tall-man'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/my-picture-book-0'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
