--- a/stories/no/0315_sakimas-sang.html
+++ b/stories/no/0315_sakimas-sang.html
@@ -63,7 +63,7 @@ Ursula Nafula<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/04.jpg" /></p>
 
-<p>Sakima kunne mange ting som andre seksåringer ikke kunne. For eksempel kunne kan sitte med eldre landsbymedlemmer og diskutere viktige saker.</p>
+<p>Sakima kunne mange ting som andre seksåringer ikke kunne. For eksempel kunne han sitte med eldre landsbymedlemmer og diskutere viktige saker.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
