--- a/stories/no/0315_sakimas-sang_slides.html
+++ b/stories/no/0315_sakimas-sang_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/04.jpg" /></p>
-<p>Sakima kunne mange ting som andre seksåringer ikke kunne. For eksempel kunne kan sitte med eldre landsbymedlemmer og diskutere viktige saker.</p>
+<p>Sakima kunne mange ting som andre seksåringer ikke kunne. For eksempel kunne han sitte med eldre landsbymedlemmer og diskutere viktige saker.</p>
 <center>
 <strong>3</strong>
 </center>
