--- a/stories/no/0066_nozibele-og-de-tre-hårstråene_slides.html
+++ b/stories/no/0066_nozibele-og-de-tre-hårstråene_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Moja książka z obrazkami - Global African Storybook</title>
+  <title>Nozibele og de tre hårstråene - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="moja-książka-z-obrazkami" class="slide level1">
-<h1>Moja książka z obrazkami</h1>
+<section id="nozibele-og-de-tre-hårstråene" class="slide level1">
+<h1>Nozibele og de tre hårstråene</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/02.jpg" /></p>
-<p>Dziewczynka</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/02.jpg" /></p>
+<p>For lenge, lenge siden gikk tre jenter ut for å samle ved.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/03.jpg" /></p>
-<p>Ptak</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/03.jpg" /></p>
+<p>Det var en varm dag så de gikk ned til elven for å svømme. De lekte og plasket og svømte i vannet.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/04.jpg" /></p>
-<p>Lew</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/04.jpg" /></p>
+<p>Plutselig innså de at det var blitt sent. De skyndte seg tilbake til landsbyen.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/05.jpg" /></p>
-<p>Kot</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/05.jpg" /></p>
+<p>Da de var nesten hjemme la Nozibele hånden på halsen. Hun hadde glemt halsbåndet! &quot;Vær så snill og dra tilbake sammen med meg!&quot; tryglet hun vennene sine. Men vennene hennes sa at det var for sent.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,12 +132,93 @@
 </section>
 <section class="slide level1">
 
-<h2 id="moja-książka-z-obrazkami-1">Moja książka z obrazkami</h2>
-<strong>Text:</strong> Oku Modesto<br> <strong>Illustrations:</strong> Rob Owen, Marleen Visser, Katrien Coetzer, Wiehan de Jager, Karen Lilje, Catherine Groenewald, Alice Toich<br> <strong>Translation:</strong> Aleksandra Migorska<br> <strong>Language:</strong> Polish<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/06.jpg" /></p>
+<p>Så Nozibele gikk tilbake til elven alene. Hun fant halsbåndet og skynde seg hjem. Men hun gikk seg vill i mørket.</p>
+<center>
+<strong>5</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/07.jpg" /></p>
+<p>I det fjerne så hun lys som kom fra en hytte. Hun skyndte seg mot den og banket på døra.</p>
+<center>
+<strong>6</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/08.jpg" /></p>
+<p>Til hennes forbauselse var det hund som åpnet døra og sa, &quot;Hva er det du vil?&quot; &quot;Jeg har gått meg vill og trenger et sted å sove,&quot; sa Nozibele. &quot;Kom inn, ellers biter jeg deg!&quot; sa hunden. Så Nozibele gikk inn.</p>
+<center>
+<strong>7</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/09.jpg" /></p>
+<p>Da sa hunden, &quot;Lag mat for meg!&quot; &quot;Men jeg har aldri laget mat for en hund før,&quot; svarte hun. &quot;Lag mat, ellers biter jeg deg!&quot; sa hunden. Så Nozibele laget litt mat til hunden.</p>
+<center>
+<strong>8</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/10.jpg" /></p>
+<p>Da sa hunden, &quot;Re opp sengen for meg!&quot; Nozibele svarte, &quot;Jeg har aldri redd opp sengen for en hund.&quot; &quot;Re opp sengen, ellers biter jeg deg!&quot; sa hunden. Så Nozibele redde opp sengen.</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/11.jpg" /></p>
+<p>Hver dag måtte hun lage mat og feie og gjøre rent for hunden. Så en dag sa hunden, &quot;Nozibele, i dag må jeg besøke noen venner. Fei huset, lag mat og gjør rent tingene mine før jeg kommer tilbake.&quot;</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/12.jpg" /></p>
+<p>Så snart hunden var dratt tok Nozibele tre hårstrå fra hodet sitt. Hun la ett hårstrå under senga, ett bak døra, og ett i innhegningen. Så løp hun hjem så fort hun orket.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/13.jpg" /></p>
+<p>Da hunden kom tilbake, lette han etter Nozibele. &quot;Nozibele, hvor er du?&quot; ropte han. &quot;Jeg er her, under senga,&quot; sa det første hårstrået. &quot;Jeg er her, bak døra,&quot; sa det andre hårstrået. &quot;Jeg er her, i innhegningen,&quot; sa det tredje hårstrået.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/14.jpg" /></p>
+<p>Da skjønte hunden at Nozibele hadde lurt ham. Så han løp og løp hele veien til landsbyen. Men der ventet brødrene til Nozibele med store kjepper. Hunden snudde seg og løp bort, og han har ikke blitt sett siden.</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="nozibele-og-de-tre-hårstråene-1">Nozibele og de tre hårstråene</h2>
+<strong>Tekst:</strong> Tessa Welch<br> <strong>Illustrasjoner:</strong> Wiehan de Jager<br> <strong>Oversettelse:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
 <p>
-This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
+Denne fortellingen kommer fra <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, som jobber med å oversette fortellingene fra <a href='http://africanstorybook.org/'>African Storybook Project</a> til alle verdens språk.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/my-picture-book-0'>here</a>
+Du kan se den originale fortellingen på ASP-websida <a href='http://africanstorybook.org/stories/nozibele-and-three-hairs'>her</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
