--- a/stories/pl/0001_bardzo-wysoki-człowiek_slides.html
+++ b/stories/pl/0001_bardzo-wysoki-człowiek_slides.html
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <h2 id="bardzo-wysoki-człowiek-1">Bardzo wysoki człowiek</h2>
-<strong>Text:</strong> Cornelius Gulere<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> Aleks M.<br> <strong>Language:</strong> Polish<br>
+<strong>Text:</strong> Cornelius Gulere<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> Aleksandra Migorska<br> <strong>Language:</strong> Polish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
