--- a/stories/pl/0003_mundurki-szkolne.html
+++ b/stories/pl/0003_mundurki-szkolne.html
@@ -103,7 +103,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Polski</div><div class="page
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br /><strong>Illustrations:</strong> Mlungisi Dlamini<br /><strong>Translation:</strong> Aleks M.<br /><strong>Language:</strong> Polish</p>
+<p><strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br /><strong>Illustrations:</strong> Mlungisi Dlamini<br /><strong>Translation:</strong> Aleksandra Migorska<br /><strong>Language:</strong> Polish</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/school-clothes">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
