--- a/stories/pl/0003_mundurki-szkolne_slides.html
+++ b/stories/pl/0003_mundurki-szkolne_slides.html
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <h2 id="mundurki-szkolne-1">Mundurki szkolne</h2>
-<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Mlungisi Dlamini<br> <strong>Translation:</strong> Aleks M.<br> <strong>Language:</strong> Polish<br>
+<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Mlungisi Dlamini<br> <strong>Translation:</strong> Aleksandra Migorska<br> <strong>Language:</strong> Polish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
