--- a/stories/pl/0009_gdzie-jest-mój-kot_slides.html
+++ b/stories/pl/0009_gdzie-jest-mój-kot_slides.html
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <h2 id="gdzie-jest-mój-kot-1">Gdzie jest mój kot?</h2>
-<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Bronwen Heath<br> <strong>Translation:</strong> Aleks M.<br> <strong>Language:</strong> Polish<br>
+<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Bronwen Heath<br> <strong>Translation:</strong> Aleksandra Migorska<br> <strong>Language:</strong> Polish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
