--- a/stories/pl/0327_liczymy-zwierzęta_slides.html
+++ b/stories/pl/0327_liczymy-zwierzęta_slides.html
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <h2 id="liczymy-zwierzęta-1">Liczymy zwierzęta</h2>
-<strong>Text:</strong> Zanele Buthelezi, Thembani Dladla, Clare Verbeek<br> <strong>Illustrations:</strong> Rob Owen<br> <strong>Translation:</strong> Aleks M.<br> <strong>Language:</strong> Polish<br>
+<strong>Text:</strong> Zanele Buthelezi, Thembani Dladla, Clare Verbeek<br> <strong>Illustrations:</strong> Rob Owen<br> <strong>Translation:</strong> Aleksandra Migorska<br> <strong>Language:</strong> Polish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
