--- a/stories/pl/0342_kara_slides.html
+++ b/stories/pl/0342_kara_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>同植物講嘢嘅卡麗 - Global African Storybook</title>
+  <title>Kara - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="同植物講嘢嘅卡麗" class="slide level1">
-<h1>同植物講嘢嘅卡麗</h1>
+<section id="kara" class="slide level1">
+<h1>Kara</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/02.jpg" /></p>
-<p>呢個係卡麗。佢今年七歲。喺肯雅嘅當地方言入便，呢個名係“好人”嘅意思。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/02.jpg" /></p>
+<p>Pewnego dnia, mama przyniosła mnóstwo owoców.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/03.jpg" /></p>
-<p>卡麗朝頭早醒翻嚟，同樖橙樹就話：“橙樹吖，唔該你快高長大啦，俾我哋結好多又大又甜嘅橙仔！”</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/03.jpg" /></p>
+<p>— Kiedy możemy zjeść owoce? — zapytaliśmy. — Będziemy jeść owoce dziś wieczorem — odpowiedziała mama.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/04.jpg" /></p>
-<p>喺卡麗行路翻學嘅路上佢就同草地講嘢話：“草地吖，唔該你一定要生到綠茵茵㗎，唔好乾枯晒啦。”</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/04.jpg" /></p>
+<p>Ponieważ mój brat Rahim jest łakomy, spróbował każdego owoca. On zwykle dużo je.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/05.jpg" /></p>
-<p>卡麗路過啲野花，佢就同啲野花講：“野花吖，唔該你哋盡情噉開放啦，噉我可以喺我頭髮上面夾住你哋啦。”</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/05.jpg" /></p>
+<p>— Spójrz co zrobił Rahim! — krzyknął mój młodszy braciszek. — Rahim jest niegrzeczny i samolubny — przyznałam.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/06.jpg" /></p>
-<p>喺學校度，卡麗同操場中間嘅小樹就話：“小樹吖，唔該你快啲生出枝葉㗎，噉我哋就可以喺樹蔭中讀書啦。”</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/06.jpg" /></p>
+<p>Mama jest zła na Rahima.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/07.jpg" /></p>
-<p>卡麗仲同學校左近嘅灌木叢就話：“灌木吖，唔該你哋一定要生到壯壯㗎，噉衰人就唔入得嚟學校啦。”</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/07.jpg" /></p>
+<p>My też jesteśmy źli na Rahima, ale Rahim nie okazuje skruchy.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/08.jpg" /></p>
-<p>當卡麗由學校翻到屋企，佢又去睇吓樖橙樹，問佢話：“你結咗橙仔未呀？”</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/08.jpg" /></p>
+<p>— Czy nie ukarzesz Rahima? — zapytał mój młodszy braciszek?</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/09.jpg" /></p>
-<p>卡麗歎咗啖氣就話：“啲橙仔仲係綠色嘅，我聽日再嚟睇吓你啦！或者聽日你就會俾隻又大又甜嘅橙仔我嘞！”</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/09.jpg" /></p>
+<p>— Rahim — już niedługo spotka Cię kara — przestrzegła go mama.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,12 +168,48 @@
 </section>
 <section class="slide level1">
 
-<h2 id="同植物講嘢嘅卡麗-1">同植物講嘢嘅卡麗</h2>
-<strong>文:</strong> Ursula Nafula<br> <strong>圖:</strong> Jesse Pietersen<br> <strong>譯:</strong> dohliam<br> <strong>語言:</strong> 粵語<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/10.jpg" /></p>
+<p>Niedługo potem, Rahim zaczął źle się czuć.</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/11.jpg" /></p>
+<p>— Bardzo boli mnie brzuch — szepnął Rahim.</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/12.jpg" /></p>
+<p>Mama wcześniej to przewidziała. Owoce teraz wymierzają karę Rahimowi!</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/13.jpg" /></p>
+<p>Rahim postanowił nas przeprosić. — Już nigdy nie będę taki samolubny — obiecał. I wszyscy mu uwierzyliśmy.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="kara-1">Kara</h2>
+<strong>Text:</strong> Adelheid Marie Bwire<br> <strong>Illustrations:</strong> Melany Pietersen<br> <strong>Translation:</strong> Aleksandra Migorska<br> <strong>Language:</strong> Polish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/khalai-talks-plants'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/punishment'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
